v2: fix icon overflow

--- a/src/v2/v2-icons-clip.css
+++ b/src/v2/v2-icons-clip.css
@@ -3,7 +3,7 @@ svg[class*="icon-"] {display:none;}
 [class*="icon-"].empty > * {display:none;}
 [class*="icon-"]:not(:empty):not(.empty):before {margin-right:var(--icon-mar, .3em);}
 
-[class*="icon-"] {--w:16;--p:path("M8 4l4 4,-4 4,-4-4z");}
+[class*="icon-"] {--w:16;--p:path("M8 4l4 4,-4 4,-4-4z");overflow:hidden;}
 [class*="icon-"]:before {content:'';display:inline-block;width:1em;height:1em;vertical-align:var(--icon-vert, -10%);}
 [class*="icon-"]:before {
   --sc: calc(var(--font-scale, 1) * var(--fsz, 1) * 16 / var(--w) * var(--icon-scale, 1));
